# photo-edit

./: .gitignore  Cargo.toml  README.md
docs/: structure.md  todo.md
docs/devlog/: 2025-03-11.md
src/: album.rs  conversions.rs  functions.rs  main.rs  pipeline.rs  pixelwise.rs  repository.rs  types.rs  ui.rs  update.rs  update_event.rs  view.rs  view_mode.rs  viewport.rs  workspace.rs
src/pipeline/: camera_uniform.rs  crop_uniform.rs  export_image.rs  parameter_uniform.rs  pipeline.rs  pipeline_factory.rs  primitive.rs  radial_parameter.rs  transform.rs  uniform.rs  vertex.rs  viewport.rs
src/pipeline/shaders/: image.wgsl
src/repository/: album_repository.rs  album_repository_factory.rs  parameter_name.rs  repository.rs  repository_factory.rs  settings_repository.rs  settings_repository_factory.rs
src/shaders/: image.wgsl
src/ui/: main_window.rs  message.rs  panes.rs  utils.rs  welcome_window.rs  window.rs
src/ui/panes/: bottom_pane.rs  image_selection_pane.rs  render_pane.rs  toolbox_pane.rs  top_pane.rs  welcome_pane.rs
src/workspace/: album.rs  album_factory.rs  album_image.rs  album_image_loader.rs  image_loader.rs  image_manager.rs  parameters.rs  workspace.rs  workspace_factory.rs
