[package]
name = "image-edit"
version = "0.1.0"
edition = "2021"

[profile.bench]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.25"
num = "0.4"
iced = { version = "0.13", features = ["image", "advanced"] }
rayon = "1.10"
native-dialog = "0.7"