[package]
name = "image-edit"
version = "0.1.0"
edition = "2021"

[profile.bench]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.25"
num = "0.4"
iced = { version = "0.13", features = ["image", "advanced", "wgpu", "async-std"] }
rayon = "1.10"
native-dialog = "0.7"
bytemuck = { version = "1.0", features = ["derive"] }
glam = { version = "0.25", features = ["bytemuck"] }
cgmath = "0.18"
rusqlite = { version = "0.34.0", features = ["bundled", "blob"] }
futures-executor = "0.3"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
iced_futures = "0.13.2"
iced_fonts = { version = "0.2.1", features = ["nerd"] }
itertools = "0.14.0"

[dev-dependencies]
rstest = "0.25"

[profile.dev.package."*"]
opt-level = 3
